# project-guardrails-banking-ai-assistant

./: .gitignore  About.md  NotionSetupCode.ipynb  README.md  bank_guardrail_config.json  bank_guardrail_config_external.json  bank_guardrail_config_internal.json  main.py  pyproject.toml  testing.ipynb
assistant/cli/: demo_mode.py  interactive_chat.py
assistant/core/: amex_guardrails.py  amex_policy_assistant.py  amex_policy_knowledge.py  amex_recommendation_assistant.py  amex_router.py  assistant.py  config.py  guardrails.py  knowledge_base.py  notion_amex_faqs.py
assistant/ui/: amex_streamlit_app.py  streamlit_app.py
data/: notion_faq_dump.json
vectorstore/notion_amex_faqs/: index.pkl
